force-app/main/default/objects/External_Tickets__c/fields/TAX_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>TAX_ID_Number__c</fullName>
    <formula>Account__r.Business_Number__c</formula>
    <label>TAX ID Number</label>
    <type>Text</type>
</CustomField>