force-app/main/default/objects/External_Tickets__c/fields/Ticket_Count__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Count__c</fullName>
    <description>產生明細張數</description>
    <label>Ticket Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>