force-app/main/default/objects/External_Tickets__c/fields/Ticket_Number_External_Use__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Number_External_Use__c</fullName>
    <label>Ticket Number External Use</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>