force-app/main/default/objects/External_Tickets__c/fields/Ticket_Receiver__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Receiver__c</fullName>
    <description>機票寄送對象</description>
    <inlineHelpText>機票寄送對象</inlineHelpText>
    <label>Ticket Receiver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>