force-app/main/default/objects/External_Tickets__c/fields/Ticket_Redeem_Coupon_Number__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Redeem_Coupon_Number__c</fullName>
    <inlineHelpText>機票兌換號碼(起始碼)</inlineHelpText>
    <label>Ticket Redeem Coupon Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>