force-app/main/default/objects/External_Tickets__c/fields/Ticket_Redeem_Coupon_Number_End__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Redeem_Coupon_Number_End__c</fullName>
    <formula>IF( Ticket_Redeem_Coupon_Number__c &lt;&gt; NULL, 
LEFT(Ticket_Redeem_Coupon_Number__c,8) &amp; TEXT(Total_Purchasing_Number__c)+TEXT(IF(MOD(Total_Purchasing_Number__c, 6)=0,6,MOD(Total_Purchasing_Number__c, 6))),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ticket Redeem Coupon Number End</label>
    <type>Text</type>
</CustomField>