force-app/main/default/objects/External_Tickets__c/fields/Total_Purchasing_Number__c.field-meta.xml
<CustomField>
    <fullName>Total_Purchasing_Number__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Total Purchasing Number</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>