force-app/main/default/objects/External_Tickets__c/fields/Trip__c.field-meta.xml
<CustomField>
    <fullName>Trip__c</fullName>
    <label>Trip</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Certificate_Version__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>來回</fullName>
                <default>true</default>
                <label>來回</label>
            </value>
            <value>
                <fullName>單程</fullName>
            </value>
            <value>
                <fullName>Round Trip</fullName>
            </value>
            <value>
                <fullName>One Way</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>