force-app/main/default/objects/External_Tickets__c/fields/Two_People__c.field-meta.xml
<CustomField>
    <fullName>Two_People__c</fullName>
    <description>雙人成行</description>
    <inlineHelpText>雙人成行</inlineHelpText>
    <label>Two People</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>