force-app/main/default/objects/External_Tickets__c/recordTypes/Barter_Tickets.recordType-meta.xml
<RecordType>
    <fullName>Barter_Tickets</fullName>
    <active>true</active>
    <description>產品交換</description>
    <label>Barter Tickets</label>
</RecordType>