force-app/main/default/objects/External_Tickets__c/recordTypes/Bulk_Tickets.recordType-meta.xml
<RecordType>
    <fullName>Bulk_Tickets</fullName>
    <active>true</active>
    <description>量票</description>
    <label>Bulk Tickets</label>
</RecordType>