force-app/main/default/objects/External_Tickets__c/recordTypes/Free_Reduced_Fare_Tickets.recordType-meta.xml
<RecordType>
    <fullName>Free_Reduced_Fare_Tickets</fullName>
    <active>true</active>
    <description>優待機票</description>
    <label>Free &amp; Reduced Fare Tickets</label>
</RecordType>