force-app/main/default/objects/External_Tickets__c/validationRules/vrExternal_Ticket_Field_Necessary_DM.validationRule-meta.xml
<ValidationRule>
    <fullName>vrExternal_Ticket_Field_Necessary_DM</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    (
        ISPICKVAL(Fare_Basis__c ,&apos;DM&apos;) &amp;&amp;
        Paper_Certificated__c=TRUE
    )
)
&amp;&amp;
(
    ISPICKVAL(Booking_Class_Departure_External__c,&apos;&apos;) ||
    ISPICKVAL(Booking_Class_Returning_External__c,&apos;&apos;) ||
    ISBLANK(TEXT(Trip__c))||
    (
        IF( ISPICKVAL(Certificate_Version__c, &apos;Chinese&apos;),
            ISBLANK(TEXT(Itinerary_Departure_CH__c)) || 
            ISBLANK(TEXT(Itinerary_Return_CH__c)),
            ISBLANK(TEXT(Itinerary_Departure__c)) || 
            ISBLANK(TEXT(Itinerary_Return__c))
          )
    ) 
)
&amp;&amp;
(
 RecordType.Name=&apos;Free &amp; Reduced Fare Tickets&apos;
)</errorConditionFormula>
    <errorMessage>Pls double check the mentioned filed has been completed due need to issue paper certificate.
.</errorMessage>
</ValidationRule>