force-app/main/default/objects/External_Tickets__c/validationRules/vrExternal_Ticket_Redeem_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>vrExternal_Ticket_Redeem_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Redeem_Valid_Start_Date__c &gt;= Redeem_Valid_End_Date__c</errorConditionFormula>
    <errorMessage>Redeem Valid Start Date must later or equal to Redeem Valid End Date.</errorMessage>
</ValidationRule>