force-app/main/default/objects/External_Tickets__c/validationRules/vrExternal_Tickets_Itinerary.validationRule-meta.xml
<ValidationRule>
    <fullName>vrExternal_Tickets_Itinerary</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
CONTAINS(TEXT(Itinerary_Departure__c) ,&apos;LAX&apos;) ||
CONTAINS(TEXT(Itinerary_Departure__c) ,&apos;SFO&apos;) ||
CONTAINS(TEXT(Itinerary_Departure__c) ,&apos;SEA&apos;) ||
CONTAINS(TEXT(Itinerary_Return__c) ,&apos;LAX&apos;)||
CONTAINS(TEXT(Itinerary_Return__c) ,&apos;SFO&apos;)||
CONTAINS(TEXT(Itinerary_Return__c) ,&apos;SEA&apos;)
)</errorConditionFormula>
    <errorDisplayField>Date_of_Birth__c</errorDisplayField>
    <errorMessage>Please fill this field.</errorMessage>
</ValidationRule>