force-app/main/default/objects/External_Tickets__c/validationRules/vrTicket_Quota_Manage_B_Left_after_Used.validationRule-meta.xml
<ValidationRule>
    <fullName>vrTicket_Quota_Manage_B_Left_after_Used</fullName>
    <active>false</active>
    <description>Budget Left after Used must more than or equal to 0.</description>
    <errorConditionFormula>Budget_Left_after_Used__c&lt;0</errorConditionFormula>
    <errorMessage>Budget Left after Used must more than or equal to 0.</errorMessage>
</ValidationRule>