force-app/main/default/objects/External_Tickets__c/validationRules/vrTicket_Quota_Manage_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>vrTicket_Quota_Manage_Type</fullName>
    <active>true</active>
    <description>Record Type must the same.</description>
    <errorConditionFormula>QuotaManageID__c &lt;&gt; null &amp;&amp;
RecordType.Name&lt;&gt; TEXT(QuotaManageID__r.Type_For__c) &amp;&amp;
RecordType.DeveloperName != &quot;Free_Reduced_Fare_Tickets&quot;</errorConditionFormula>
    <errorDisplayField>QuotaManageID__c</errorDisplayField>
    <errorMessage>This quota isn&apos;t belong to this record type, please change another quota.</errorMessage>
</ValidationRule>