force-app/main/default/objects/External_Tickets__c/listViews/Barter_External_Tickets.listView-meta.xml
<ListView>
    <fullName>Barter_External_Tickets</fullName>
    <columns>NAME</columns>
    <columns>Case_No__c</columns>
    <columns>Company__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Item_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>External_Tickets__c.Barter_Tickets</value>
    </filters>
    <label>Barter</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>