force-app/main/default/objects/External_Tickets__c/listViews/Bulk_Tickets_External_Tickets.listView-meta.xml
<ListView>
    <fullName>Bulk_Tickets_External_Tickets</fullName>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>Total_Purchasing_Number__c</columns>
    <columns>Budget__c</columns>
    <columns>Budget_Left_after_Used__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Item_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>External_Tickets__c.Bulk_Tickets</value>
    </filters>
    <label>Bulk Tickets</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>