force-app/main/default/objects/External_Tickets__c/listViews/Free_Reduced_Fare_Tickets.listView-meta.xml
<ListView>
    <fullName>Free_Reduced_Fare_Tickets</fullName>
    <columns>NAME</columns>
    <columns>SerialID__c</columns>
    <columns>Applicant_Dept__c</columns>
    <columns>Application_Type__c</columns>
    <columns>Budget_Type__c</columns>
    <columns>Ticket_Count__c</columns>
    <columns>Fare_Basis__c</columns>
    <columns>Discount__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>External_Tickets__c.Free_Reduced_Fare_Tickets</value>
    </filters>
    <label>Free &amp; Reduced Fare Tickets</label>
</ListView>